# dvrk_record_video

./: CMakeLists.txt  README.md  config.yaml  package.xml  setup.py
scripts/: node_dvrk_record_video.py
